@@ -1,5 +1,6 @@
 Next
 
+- BUG: Hardcode Git version in patch-files to avoid chatty diffs (#5)
 - BUG: Fixed SHA1 missing issue which prevented three-way merges (#3)
 - BUG: Fixed incorrect patch counter on resolve (#2)
 - BUG: Fixed issue where updated patches were miscounted when adding a new
